@@ -6,15 +6,17 @@ package com.EONET.eonet.controller;
 //import com.example.project.dto.TaxiPostDto;
 //import com.example.project.repository.TaxiPostRepository;
 //import com.example.project.repository.MemberRepository;
-import org.springframework.transaction.annotation.Transactional;
 import com.EONET.eonet.domain.Member;
+import com.EONET.eonet.domain.TaxiParticipant;
 import com.EONET.eonet.domain.TaxiPost;
 import com.EONET.eonet.dto.TaxiPostDto;
 import com.EONET.eonet.repository.MemberRepository;
+import com.EONET.eonet.repository.TaxiParticipantRepository;
 import com.EONET.eonet.repository.TaxiPostRepository;
 import com.EONET.eonet.service.CommentService;
 import com.EONET.eonet.service.MemberService;
 import com.EONET.eonet.service.TaxiPostService;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -37,7 +39,6 @@ import java.util.stream.Collectors;
 @Controller
 @Slf4j
 @RequestMapping("/api/taxi-posts")
-
 @RequiredArgsConstructor
 public class TaxiPostController {
 
@@ -45,6 +46,7 @@ public class TaxiPostController {
     private final MemberRepository memberRepository;
     private final MemberService memberService;
     private final TaxiPostService taxiPostService;
+    private final TaxiParticipantRepository taxiParticipantRepository;
     private final CommentService commentService;
 
     @RequestMapping("/postList")
@@ -87,10 +89,9 @@ public class TaxiPostController {
             // 비로그인 상태면 무조건 false
             model.addAttribute("isOwner", false);
         }
-        // 참여자 명단 필터링 (Member.participant가 이 post의 ID와 일치하는 사용자만)
         List<Member> participants = memberRepository.findAll().stream()
                 .filter(m -> m.getParticipant() != null && m.getParticipant().equals(String.valueOf(id)))
-                .collect(Collectors.toList());
+                .toList();  // Java 16 이상. Java 8이면 .collect(Collectors.toList());
         model.addAttribute("participants", participants);
 
         return "postDetail"; // resources/templates/postDetail.html
@@ -104,6 +105,7 @@ public class TaxiPostController {
         }
 
         Member loginMember = memberService.findByUsername(auth.getName());
+        taxiPostService.deletePost(id, loginMember.getId());
 
         List<Member> participants = memberRepository.findAll().stream()
                 .filter(m -> id.toString().equals(m.getParticipant()))
@@ -112,26 +114,6 @@ public class TaxiPostController {
         for (Member m : participants) {
             m.setParticipant(null);
             memberRepository.save(m);
-        }
-
-
-        taxiPostService.deletePost(id, loginMember.getId());
-
-        return "redirect:/api/taxi-posts/postList";
-    }
-
-    @PostMapping("/cancel")
-    @Transactional
-    public String cancelParticipation() {
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        if (auth == null || !auth.isAuthenticated() || "anonymousUser".equals(auth.getName())) {
-            return "redirect:/login";
-        }
-
-        Member member = memberService.findByUsername(auth.getName());
-        if (member.getParticipant() != null) {
-            member.setParticipant(null); // 참여 상태 초기화
-            memberRepository.save(member);
         }
 
         return "redirect:/api/taxi-posts/postList";
@@ -197,8 +179,7 @@ public class TaxiPostController {
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
         if (auth != null && auth.getName() != null) {
             Member member = memberService.findByUsername(auth.getName());
-            model.addAttribute("memberId", member.getId());// createPost.html로 넘김
-            model.addAttribute("studentId", member.getStudentId());
+            model.addAttribute("memberId", member.getId()); // createPost.html로 넘김
         }
 
         return "post/createPost"; // templates/post/createPost.html로 렌더링
@@ -212,7 +193,21 @@ public class TaxiPostController {
         commentService.saveComment(postId, content, member);
         return "redirect:/api/taxi-posts/" + postId;
     }
+    @PostMapping("/cancel")
+    @Transactional
+    public String cancelParticipation(RedirectAttributes redirectAttributes) {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        if (auth == null || !auth.isAuthenticated() || "anonymousUser".equals(auth.getName())) {
+            return "redirect:/login";
+        }
 
+        Member member = memberService.findByUsername(auth.getName());
+        member.setParticipant(null);
+        memberRepository.save(member);
+
+        redirectAttributes.addFlashAttribute("message", "참여가 취소되었습니다.");
+        return "redirect:/api/taxi-posts/postList";
+    }
 
     @PostMapping("/join")
     @Transactional
@@ -223,24 +218,24 @@ public class TaxiPostController {
         }
 
         Member member = memberService.findByUsername(auth.getName());
+
         if (member.getParticipant() != null) {
-            redirectAttributes.addFlashAttribute("errorMessage", "이미 참여중입니다.");
+            redirectAttributes.addFlashAttribute("errorMessage", "이미 다른 게시글에 참여 중입니다.");
             return "redirect:/api/taxi-posts/" + postId;
         }
 
-        // 참여자 수 확인
-        List<Member> participants = memberRepository.findAll().stream()
-                .filter(m -> postId.toString().equals(m.getParticipant()))
-                .collect(Collectors.toList());
+        long currentCount = memberRepository.findAll().stream()
+                .filter(m -> String.valueOf(postId).equals(m.getParticipant()))
+                .count();
 
-        if (participants.size() >= 4) {
-            // 참여자 수 4명이상 못 받도록 하는 조건문
+        if (currentCount >= 4) {
             redirectAttributes.addFlashAttribute("errorMessage", "참여 인원이 가득 찼습니다.");
             return "redirect:/api/taxi-posts/" + postId;
         }
 
+        member.setParticipant(String.valueOf(postId));
+        memberRepository.save(member);
+
         return "redirect:/api/taxi-posts/" + postId;
     }
-
-
 }
